k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpo-api-search-fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpo-api-search-fastapi
  template:
    metadata:
      labels:
        app: mpo-api-search-fastapi
    spec:
      containers:
      - name: mpo-api-search-fastapi
        image: mpo-api-search-fastapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
