k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpo-api-search-fastapi-service
spec:
  type: LoadBalancer
  selector:
    app: mpo-api-search-fastapi
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
